--- a/views/admin/add-post.ejs
+++ b/views/admin/add-post.ejs
@@ -1,4 +1,4 @@
-<form action="/add-post" method="POST" class="form">
+<form action="/add-post" method="POST" class="form" enctype="multipart/form-data">
   <div class="form add-post1">
     <label for="title" class="form-label">Judul</label>
     <input
@@ -10,6 +10,19 @@
       required
     />
   </div>
+  <div class="form add-post1">
+    <label for="brand and series" class="form-label">Brand and Series</label>
+    <input
+      type="text"
+      id="bns"
+      name="bns"
+      class="form-control"
+      placeholder="misal samsung A55"
+      required
+    />
+  </div>
+
+
   <div class="form add-post2">
     <label for="body" class="form-label">Artikel</label>
     <textarea
@@ -23,32 +36,39 @@
     ></textarea>
   </div>
 
-  <button type="submit" class="submit-post">Tambah Post</button>
+  <h2>Upload Image</h2>
+
+  <!-- <div class="mb-3">
+    <label for="imageDesc">image Description</label>
+    <input
+      type="text"
+      class="form-control"
+      id="imageDesc"
+      name="imageDesc"
+      required
+   
+    />
+  </div> -->
+  <div class="mb-3">
+    <label for="utama" class="form-label"
+      ><i class="bi bi-cloud-upload"></i> Select Image Utama</label
+    >
+    <input
+      type="file"
+      class="form-control"
+      id="file"
+      name="utama"
+      required
+   
+    />
+  </div>
+
+
+  <button type="submit" class="submit-post">Tambah Post Article</button>
 </form>
 
-  <h2>Upload Image</h2>
-  <form
-    id="uploadForm"
-    action="/upload"
-    method="POST"
-    enctype="multipart/form-data"
-  >
-    <div class="mb-3">
-      <label for="file" class="form-label"
-        ><i class="bi bi-cloud-upload"></i> Select Image</label
-      >
-      <input
-        type="file"
-        class="form-control"
-        id="file"
-        name="file"
-        required
-     
-      />
-    </div>
 
-    <input type="submit" class="btn btn-primary">Upload</input>
-  </form>
+
 
 
 </div>
