--- a/views/admin/post-article.ejs
+++ b/views/admin/post-article.ejs
@@ -8,5 +8,15 @@
   <body>
     <div><%=data.title %></div>
     <div><%=data.body %></div>
+    <div>
+      <% if (data.file && data.file.fileId) { %>
+      <img
+        src="/image/<%= data.file.fileId %>"
+        alt="<%= data.file.filename %>"
+        style="width: 300px; height: 200px"
+      />
+
+      <% } %>
+    </div>
   </body>
 </html>
