--- a/views/about.ejs
+++ b/views/about.ejs
@@ -6,6 +6,24 @@
     <title>Document</title>
   </head>
   <body>
-    <h1>ini adalah halaman about</h1>
+    <h1>Tentang Kami</h1>
+    <p>
+      Kami adalah penyedia layanan web akuntansi di surabaya yang siap melayani
+      kebutuhan produk web akuntansi UMKM #saudarakami. Berbagai masalah
+      pembukuan yang kami tangani selalu memberikan solusi pembenahan pembukuan
+      yang memuaskan bagi #saudarakami."
+    </p>
+    <br />
+    <h1>Layanan Kami</h1>
+    <ul>
+      <li>
+        Menjual produk web akuntansi AB accounting Kustomisasi (Penyesuaian) AB
+        Accounting menurut kebutuhan usaha anda
+      </li>
+      <li>
+        AB Accounting Basic: Hitung Stok Barang Invoice Penjualan dan Pembelian
+        Jurnal Umum (Pembukuan Harian) Laporan (Buku Besar dan Laba Rugi)
+      </li>
+    </ul>
   </body>
 </html>
