--- a/views/admin/add-post.ejs
+++ b/views/admin/add-post.ejs
@@ -1,5 +1,6 @@
+
 <form action="/add-post" method="POST" class="form" enctype="multipart/form-data">
-  <div class="form add-post1">
+  <div class="form-add-post1">
     <label for="title" class="form-label">Judul</label>
     <input
       type="text"
@@ -10,48 +11,25 @@
       required
     />
   </div>
-  <div class="form add-post1">
-    <label for="brand and series" class="form-label">Brand and Series</label>
-    <input
-      type="text"
-      id="bns"
-      name="bns"
-      class="form-control"
-      placeholder="misal samsung A55"
-      required
-    />
-  </div>
-
 
   <div class="form add-post2">
-    <label for="body" class="form-label">Artikel</label>
+    <label for="body" class="form-label">Pargraf 1</label>
     <textarea
       id="body"
       name="body"
       class="form-control"
       rows="10"
       cols="50"
-      placeholder="Tulis artikelnya"
+      placeholder="Tulis Paragraf 1"
       required
     ></textarea>
   </div>
 
   <h2>Upload Image</h2>
 
-  <!-- <div class="mb-3">
-    <label for="imageDesc">image Description</label>
-    <input
-      type="text"
-      class="form-control"
-      id="imageDesc"
-      name="imageDesc"
-      required
-   
-    />
-  </div> -->
   <div class="mb-3">
     <label for="utama" class="form-label"
-      ><i class="bi bi-cloud-upload"></i> Select Image Utama</label
+      ><i class="bi bi-cloud-upload"></i> Select Image (1,3)</label
     >
     <input
       type="file"
@@ -63,12 +41,9 @@
     />
   </div>
 
-
-  <button type="submit" class="submit-post">Tambah Post Article</button>
+  <button type="submit" class="submit-post">Posting Your Article</button>
 </form>
-
-
-
-
-
 </div>
+
+
+
