--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,8 +1,8 @@
 
 <div class="author">
-  <h1 class="author__heading">Selamat datang di BnB Blog</h1>
-  <p class="author__body">Blog yang membahas tentang smartphone, tablet dan teknologi digital</p>
-  <img src="/img/apple.jpg" alt="apple" width="528" height="758" />
+  <h1 class="author__heading">Selamat datang AB (Accounting Basis)</h1>
+  <p class="author__body">Blog yang membahas tentang accounting, perpajakan, dan aplikasi digital untuk UMKM</p>
+  <img src="/img/apple.png" alt="apple" width="758" height="528" />
   <section class="articles">
     <h2 class="articles__heading">Latest Post</h2>
 
@@ -32,4 +32,7 @@
 
     <% } %>
   </section>
+
+
+
 </div>
