--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,4 +1,4 @@
 <footer class="footer">
-  &copy; <%= new Date().getFullYear(); %> Blog tentang smartphone, tablet dan
-  teknologi
+  &copy; <%= new Date().getFullYear(); %> AB--Accounting Basis, Harmonizing Your
+  Cashflow and Assets
 </footer>
