--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,14 +1,20 @@
 <div class="header">
-  <a href="/" class="header__logo">BlogBnB</a>
+  <a href="/" class="header__logo" margin-bottom="80"
+    >Blog Seputar Accounting</a
+  >
 </div>
 <div class="header__main">
   <nav class="header__nav">
+    <img src="/img/logo.jpg" alt="AB Accounting" height="80" width="75" />
     <ul>
       <li>
-        <a href="/">Home</a>
+        <a href="/">Blog</a>
       </li>
       <li>
-        <a href="/">About</a>
+        <a href="/about">About</a>
+      </li>
+      <li>
+        <a href="/products">Products</a>
       </li>
     </ul>
   </nav>
