--- a/views/admin/dashboard.ejs
+++ b/views/admin/dashboard.ejs
@@ -11,6 +11,9 @@
       <form action="/edit-post/<%= post._id %>" method="get">
         <input type="submit" value="edit" />
       </form>
+      <form action="/delete-post/<%= post._id %>?_method=DELETE" method="POST">
+        <input type="submit" value="delete" />
+      </form>
     </div>
   </li>
   <% }) %>
