--- a/views/admin/post-article.ejs
+++ b/views/admin/post-article.ejs
@@ -3,17 +3,19 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
     <title>Smartphone</title>
   </head>
   <body>
-    <div><%=data.title %></div>
-    <div><%=data.body %></div>
+    <h2><%=data.title %></h2>
+    <p><%=data.body %></p>
+
     <div>
       <% if (data.file && data.file.fileId) { %>
       <img
         src="/image/<%= data.file.fileId %>"
         alt="<%= data.file.filename %>"
-        style="width: 300px; height: 200px"
+        style="width: 300px; height: 200px; margin-top: 20px"
       />
 
       <% } %>
