--- a/views/partials/header_admin.ejs
+++ b/views/partials/header_admin.ejs
@@ -5,14 +5,17 @@
   <nav class="header__nav">
     <ul>
       <li>
-        <a href="/">Home</a>
+        <a href="/">Blog</a>
       </li>
       <li>
-        <a href="/">About</a>
+        <a href="/about">About</a>
+      </li>
+      <li>
+        <a href="/">Products</a>
       </li>
     </ul>
   </nav>
   <div class="header__button">
-    <button>Logout</button>
+    <a href="/logout"><button>Logout</button></a>
   </div>
 </div>
