--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,4 +1,3 @@
 <footer class="footer">
-  &copy; <%= new Date().getFullYear(); %> AB--Accounting Basis, Harmonizing Your
-  Cashflow and Assets
+  &copy; <%= new Date().getFullYear(); %> blog sederhana tentang media tanam
 </footer>
