--- a/views/admin/add-post.ejs
+++ b/views/admin/add-post.ejs
@@ -11,7 +11,6 @@
       required
     />
   </div>
-
   <div class="form add-post2">
     <label for="body" class="form-label">Pargraf 1</label>
     <textarea
@@ -25,7 +24,7 @@
     ></textarea>
   </div>
 
-  <h2>Upload Image</h2>
+    <h2>Upload Image Blog</h2>
 
   <div class="mb-3">
     <label for="utama" class="form-label"
@@ -40,7 +39,11 @@
       required
    
     />
+
   </div>
+
+   
+
 
   <button type="submit" class="submit-post">Posting Your Article</button>
 </form>
