--- a/views/admin/dashboard.ejs
+++ b/views/admin/dashboard.ejs
@@ -4,6 +4,11 @@
 </div>
 
 <ul class="admin-post">
+  <li>
+    TokoKu
+    <a href="/display-products">Klik disini untuk melihat display etalase</a>
+  </li>
+
   <% data.forEach((post) => { %>
   <li>
     <a href="/post-article/<%= post._id %>"><%= post.title %></a>
