--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,6 +1,6 @@
 <div class="header">
   <a href="/" class="header__logo" margin-bottom="80"
-    >Blog Seputar Accounting</a
+    >Media Tanam Organik Berkualitas</a
   >
 </div>
 <div class="header__main">
@@ -8,13 +8,13 @@
     <img src="/img/logo.jpg" alt="AB Accounting" height="80" width="75" />
     <ul>
       <li>
-        <a href="/">Blog</a>
+        <a href="/">Products</a>
       </li>
       <li>
         <a href="/about">About</a>
       </li>
       <li>
-        <a href="/products">Products</a>
+        <a href="/blog">Blog</a>
       </li>
     </ul>
   </nav>
