--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,38 +1,11 @@
-
-<div class="author">
-  <h1 class="author__heading">Selamat datang AB (Accounting Basis)</h1>
-  <p class="author__body">Blog yang membahas tentang accounting, perpajakan, dan aplikasi digital untuk UMKM</p>
-  <img src="/img/apple.png" alt="apple" width="758" height="528" />
-  <section class="articles">
-    <h2 class="articles__heading">Latest Post</h2>
-
-
-    <% if (data.length === 0) { %>
-      <p>No posts yet. Please check back later!</p>
-    <% } else { %>
-      <ul class="artocle-ul">
-        <% data.forEach(element => { %>
-        <li>
-          <a href="/post/<%= element._id %>"
-            <span><%= element.title %></span>
-          </a>
-          <span><%= element.createdAt.toString() %></span>
-        </li>
-
-
-        <% }) %>
-      </ul> 
-  
-    <% } %>
-    
-    <% if (nextPage !==null) { %>
-    <a href="/?page=<%= nextPage %>" class="pagination"
-      >&lt view older post</a
-    >
-
-    <% } %>
-  </section>
-
-
-
-</div>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Document</title>
+  </head>
+  <body>
+    <h1>ini adalah display untuk tokonya ya.. semangat mas budi</h1>
+  </body>
+</html>
